# grok-build

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  SOURCE_REV  TODO.md  lefthook.yml  mise.ci.toml  mise.toml
.github/workflows/: build-macos-arm64.yml  policy.yml  pr.yml  upstream-sync.yml
config/: commit-email-allowlist  our-commit-emails
crates/codegen/xai-chat-state/src/: commands.rs  handle.rs
crates/codegen/xai-grok-config-types/src/: lib.rs
crates/codegen/xai-grok-models/: default_models.json
crates/codegen/xai-grok-pager/: Cargo.toml
crates/codegen/xai-grok-pager-bin/: Cargo.toml
crates/codegen/xai-grok-pager-bin/src/: main.rs
crates/codegen/xai-grok-pager-minimal/src/: live.rs  overlay.rs  panel.rs
crates/codegen/xai-grok-pager/src/: docs.rs
crates/codegen/xai-grok-shell/: CHANGELOG.md  Cargo.toml  README.md
crates/codegen/xai-grok-version/: Cargo.toml
crates/common/xai-computer-hub-router/: Cargo.toml
crates/common/xai-computer-hub-router/src/: auth.rs  hub.rs  lib.rs  main.rs  ws.rs
crates/common/xai-computer-hub-router/tests/: loopback.rs
mise-tasks-ci/ci/: release-pager  test-hub-router
mise-tasks/_lib/: commit-subject.sh  gh-origin.sh  our-commits.sh  policy-range.sh  require-cmd.sh  unpushed-range.sh
mise-tasks/ci/: check-pager  clippy-pager  dispatch  package-smoke  tools  watch
mise-tasks/commitlint/: msg  range
mise-tasks/identity/: check
mise-tasks/main/: sync
mise-tasks/pr/: merge
mise-tasks/upstream/: _lib.sh  dispatch  status  sync
mise-tasks/worktree/: setup
scripts/: install-github-release.sh
(+225 files in other folders)
